--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "node backend/server.js",
     "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
-   },
+  },
   "author": "Govinda Yadav",
   "license": "ISC",
   "description": "we gonna rule the world",
   "dependencies": {
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -17,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "socket.io": "^4.7.2"
   },
