--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://preeminent-lollipop-1b30a6.netlify.app/",
+  "homepage": "https://preeminent-lollipop-1b30a6.netlify.app",
   "private": true,
   "proxy": "http://127.0.0.1:5000",
   "dependencies": {
