--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "talking-chat",
   "version": "1.0.0",
   "main": "server.js",
-  "homepage": "https://preeminent-lollipop-1b30a6.netlify.app/",
+  "homepage": "https://preeminent-lollipop-1b30a6.netlify.app",
   "scripts": {
     "start": "node backend/server.js",
     "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
