--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "talking-chat",
   "version": "1.0.0",
   "main": "server.js",
-  "homepage": "https://preeminent-lollipop-1b30a6.netlify.app",
   "scripts": {
     "start": "node backend/server.js",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Govinda Yadav",
   "license": "ISC",
